--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
   "author": "Rastreator Frontend",
   "license": "ISC",
   "devDependencies": {
+    "@popperjs/core": "^2.9.2",
+    "autoprefixer": "^10.3.1",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "bunyan": "^1.8.12",
     "css-loader": "^6.2.0",
     "koa": "^2.6.2",
     "koa-body": "^4.0.6",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "nodemon": "^1.18.9",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
+    "sass": "^1.36.0",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2"
